tcw3/designer/tests/bad/objinit_settable.tcwdl
pub comp crate::Comp1 {}
pub comp crate::Comp2 {
    // A field having obj-init must not be settable
    const comp1 { pub set; } = crate::Comp1::new! {};
    //~^ ERROR Can't have a setter if the initializer is an object literal
}
